[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Menu"]
margin_left = 127.918
margin_top = 37.3216
margin_right = 197.918
margin_bottom = 57.3216
text = "Play"

[node name="Settings" type="Button" parent="Menu"]
margin_left = 127.275
margin_top = 65.5688
margin_right = 198.275
margin_bottom = 85.5688
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Menu"]
margin_left = 128.0
margin_top = 96.0
margin_right = 197.0
margin_bottom = 116.0
text = "Exit"

[node name="Settings" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="Settings"]
margin_left = 122.587
margin_top = 142.0
margin_right = 205.587
margin_bottom = 162.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="HSlider" parent="Settings"]
margin_left = 123.0
margin_top = 109.0
margin_right = 204.0
margin_bottom = 125.0

[node name="Label" type="Label" parent="Settings"]
margin_left = 143.77
margin_top = 90.1376
margin_right = 189.77
margin_bottom = 104.138
text = "Sound"
[connection signal="pressed" from="Menu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Settings/Menu" to="." method="_on_Menu_pressed"]
[connection signal="value_changed" from="Settings/Sound" to="." method="_on_Sound_value_changed"]
